atualização na escola

--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -17,7 +17,8 @@
       (change)="saveTask(task)"
     />
     <input [(ngModel)]="task.title" />
-    <button (click)="saveTask(task)">Salvar</button>
+    <button  *ngIf="taskRepo.metadata.apiUpdateAllowed"
+    (click)="saveTask(task)">Salvar</button>
     <button
       *ngIf="taskRepo.metadata.apiDeleteAllowed"
       (click)="deleteTask(task)"
