--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -7,6 +7,11 @@
         placeholder="Usuario"
         name="username"
       />
+      <input
+        [(ngModel)]="signInUsername"
+        placeholder="Senha"
+        name="username"
+      />
       <button>Sign in</button>
     </form>
   </main>
