--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -23,5 +23,6 @@
   </header>
   <app-todo></app-todo>
   <app-cadastro-usuario></app-cadastro-usuario>
+  <app-produtos></app-produtos>
 </ng-container>
 
