--- a/src/app/cadastro-usuario/cadastro-usuario.component.html
+++ b/src/app/cadastro-usuario/cadastro-usuario.component.html
@@ -11,7 +11,13 @@
       Role:
       <select [(ngModel)]="newUserTitle2" name="newUserRole">
         <option value="">Selecione uma opção</option>
-        <option value="admin">Admin</option>
+        <option value="admin">Administrador</option>
+        <option value="fisSelf">FisSelf</option>
+        <option value="admin">Administrador</option>
+        <option value="fisSelf">FisSelf</option>
+        <option value="admin">Administrador</option>
+        <option value="fisSelf">FisSelf</option>
+        <option value="admin">Administrador</option>
         <option value="fisSelf">FisSelf</option>
       </select>
     </label>
